--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+*wip* 1.1-3 BETA
+	- update Portuguese language
+	- dockerfile improvements
+	- dockerfile-freeradius and init-freeradius.sh
+	- fix regex query for rollback
+	- fix mysql directory in dockerfile
+
 release 1.1-2 - 08 Aug 2019
     - syntax fix in language translations
 	- set right column names for table radpostauth in FreeRADIUS v3
