Fix MAC validation in new user (requires PHP v5.5).

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	- dockerfile-freeradius and init-freeradius.sh
 	- fix regex query for rollback
 	- fix mysql directory in dockerfile
+	- fix MAC validation in new user (requires PHP v5.5)
 
 release 1.1-2 - 08 Aug 2019
     - syntax fix in language translations
